--- a/Project2/index.html
+++ b/Project2/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-
         <meta charset = "UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
           <title> Tomato, Kale, and Quinoa Soup <</title>
 <!-- I dont know if the style is going to work on this-->
         <style>
