--- a/Project2/index.html
+++ b/Project2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <meta charset = "UTF-8">
+        <meta charset = "utf-8">
       <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
           <title> Tomato, Kale, and Quinoa Soup <</title>
 <!-- I dont know if the style is going to work on this-->
