--- a/Project2/index.html
+++ b/Project2/index.html
@@ -8,7 +8,8 @@
         <style>
         body {background-color:lightgreen;}
         </style>
-
+  
+<body>
     <h1> <ins>Slow Cooker Tomato, Kale, and Quinoa Soup</ins> </h1>
       <p> This will be a recipe for a Tomato, Kale and Quinoa soup that you make in a crock pot.
       </p>
