abbundance of changes

--- a/Project2/index.html
+++ b/Project2/index.html
@@ -3,12 +3,13 @@
   <head>
         <meta charset="utf-8">
       <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-          <title> Tomato, Kale, and Quinoa Soup <</title>
+          <title> Tomato, Kale, and Quinoa Soup </title>
 <!-- I dont know if the style is going to work on this-->
-        <style>
+      <!--  <style>
         body {background-color:lightgreen;}
-        </style>
-  
+      </style>-->
+    </head>
+
 <body>
     <h1> <ins>Slow Cooker Tomato, Kale, and Quinoa Soup</ins> </h1>
       <p> This will be a recipe for a Tomato, Kale and Quinoa soup that you make in a crock pot.
