More changes to everything

--- a/Project2/pages/instructions.html
+++ b/Project2/pages/instructions.html
@@ -20,7 +20,7 @@ table, th, td{
         </tr>
         <tr>
           <th scope = "row"></th>
-          <td><img src "./images/tomato.jpg" alt = "an image of tomatoes in a bowl" title = "bowl of tomatoes" width = "30" height = "50" </td>
+          <td><img src "./images/tomato.jpg" alt = "an image of tomatoes in a bowl" title = "bowl of tomatoes" width = "30" height = "50"> </td>
           <td><img src "./images/kale-green.jpg" alt = "an image of a bunch of kale" title = "A bunch of Kale" width = "30" height = "50" </td>
           <td><img src "./images/quinoa.jpg" alt = "an image of a bowl of cooked quinoa" title = "A bowl of quinoa" width = "30" height = "50" </td>
         </tr>
