--- a/Project2/index.html
+++ b/Project2/index.html
@@ -9,7 +9,7 @@
         body {background-color:lightgreen;}
       </style>-->
     </head>
-<img src="../images/soup.jpg" alt="an image of a pot of tomato kale and quinoa soup" title = "pot of soup" width = "800px;" height = "500px;" >
+<img src="./images/soup.jpg" alt="an image of a pot of tomato kale and quinoa soup" title = "pot of soup" width = "800px;" height = "500px;" >
 
 </td>
 
