--- a/Project2/index.html
+++ b/Project2/index.html
@@ -9,7 +9,8 @@
         body {background-color:lightgreen;}
       </style>-->
     </head>
-<img src="./images/soup.jpg" alt="an image of a pot of tomato kale and quinoa soup" title = "pot of soup" width = "800px;" height = "500px;" >
+    <h1>Tomato, Kale, and Quinoa Soup!</h1>
+<img src="./images/soup.jpg" alt="an image of a pot of tomato kale and quinoa soup" title = "pot of soup" width = "550px;" height = "500px;" >
 
 </td>
 
