--- a/Project2/pages/instructions.html
+++ b/Project2/pages/instructions.html
@@ -11,6 +11,7 @@ table, th, td{
 </style>
     </head>
     <body>
+        <h1> <ins>Slow Cooker Tomato, Kale, and Quinoa Soup</ins> </h1>
       <table>
         <tr>
           <th></th>
@@ -20,12 +21,12 @@ table, th, td{
         </tr>
         <tr>
           <th scope = "row"></th>
-          <td><img src "./images/tomato.jpg" alt = "an image of tomatoes in a bowl" title = "bowl of tomatoes" width = "30" height = "50"> </td>
-          <td><img src "./images/kale-green.jpg" alt = "an image of a bunch of kale" title = "A bunch of Kale" width = "30" height = "50" </td>
-          <td><img src "./images/quinoa.jpg" alt = "an image of a bowl of cooked quinoa" title = "A bowl of quinoa" width = "30" height = "50" </td>
+          <td><img src = "./images/tomato.jpg" alt = "an image of tomatoes in a bowl" title = "bowl of tomatoes" width = "30" height = "50"> </td>
+          <td><img src = "./images/kale-green.jpg" alt = "an image of a bunch of kale" title = "A bunch of Kale" width = "30" height = "50"> </td>
+          <td><img src = "./images/quinoa.jpg" alt = "an image of a bowl of cooked quinoa" title = "A bowl of quinoa" width = "30" height = "50" ></td>
         </tr>
       </table>
-      <h1> <ins>Slow Cooker Tomato, Kale, and Quinoa Soup</ins> </h1>
+    
         <p> This will be a recipe for a Tomato, Kale and Quinoa soup that you make in a crock pot.
         </p>
         <h2> Ingredients  </h2>
