--- a/Project2/index.html
+++ b/Project2/index.html
@@ -14,6 +14,11 @@
 
 </td>
 
-<a href="./pages/instructions.html">Here are the Instructions</a>
-  </body>
-  </html>
+<li> <a href="./pages/instructions.html">Here are the Instructions</a></li>
+
+<li>  <a href="./pages/more-info.html">Watch the video for this recipe!</a></li>
+
+<li>  <a href="./pages/about.html">Learn More</a></li>
+
+</body>
+</html>
