--- a/Project2/pages/instructions.html
+++ b/Project2/pages/instructions.html
@@ -9,7 +9,7 @@ table, th, td{
   border: 1px solid black;
 }
 </style>
-    </head>
+
     <body>
         <h1> <ins>Slow Cooker Tomato, Kale, and Quinoa Soup</ins> </h1>
       <table>
@@ -26,7 +26,7 @@ table, th, td{
           <td><img src = "./images/quinoa.jpg" alt = "an image of a bowl of cooked quinoa" title = "A bowl of quinoa" width = "30" height = "50" ></td>
         </tr>
       </table>
-    
+
         <p> This will be a recipe for a Tomato, Kale and Quinoa soup that you make in a crock pot.
         </p>
         <h2> Ingredients  </h2>
@@ -57,4 +57,7 @@ table, th, td{
           </ol>
           <ul>
             <li><a href = "./form.html"> Give us your own recipes! </a></li>
-            <li><a href = "./index.html">Home</a></li>
+            <li><a href = "../index.html">Home</a></li>
+</ul>
+          </body>
+        </head>
