--- a/Project3/index.html
+++ b/Project3/index.html
@@ -1,44 +1,61 @@
 <!DOCTYPE html>
 <html>
-  <head>
-        <meta name="author" content= "Katherine Ayers">
-        <meta name "description" content= "A literature showcase showing type
-        and color understanding and relating it to a piece of writing."
-        <meta charset="utf-8">
-        <meta name "viewport" content = "width=device-width, initial-scale=1.0" >
-        <!--external font link-->
-        <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-        <!--links to stylesheets-->
-        <link rel="stylesheet" type="text/css" href =  "./css/styles.css" />
-        <link rel="stylesheet" type="text/css" href = "./css/fonts.css" />
-        </head>
+<head>
+  <meta name="author" content= "Katherine Ayers">
+  <meta name "description" content= "A literature showcase showing type
+  and color understanding and relating it to a piece of writing."
+  <meta charset="utf-8">
+  <meta name "viewport" content = "width=device-width, initial-scale=1.0" >
+  <!--external font link-->
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
+  <!--links to stylesheets-->
+  <link rel="stylesheet" type="text/css" href =  "./css/styles.css" />
+  <link rel="stylesheet" type="text/css" href = "./css/fonts.css" />
+</head>
+<body id="page1">
 
-  <body>
+  <div class="parent-container">
+    <header>
+      <h1>Harry Potter and the Sorcerer's Stone</h1>
+      <nav
+      <ul id = "nav-list" class= "navigation">
+        <div class="parent-container-02">
+          <div class ="menu-item display-inline" >
+            <a href="./pages/sample.html"> Read the full thing</a>
+            <div class ="menu-item display-inline" >
+              <a href="./pages/about.html"> About the author </a>
+            </div>
+            <div class ="menu-item display-inline" >
+              <a href="./pages/contact.html"> Contact Us </a>
+            </div>
+            <div class="menu-item dropdown">
+              <a href="#">More links</a>
+              <div class="dropdown-content">
+            <div class="dropdown-item">
+              <a href="https://www.pottermore.com/"> Pottermore </a>
+            </div>
+          </div>
+          </div>
+            <div class="site-picture">
+              <img src="images/owl.png" alt="owl">
+            </div>
+          </div>
 
-    <div class="parent-container">
-<header>
- <h1>Harry Potter and the Sorcerer's Stone</h1>
- <nav>
-   <ul id = "nav-list" class= "navigation">
-     <li>
-       <a href="./pages/sample.html"> Read the full thing</a>
-     </li>
-     <li>
-     <a href="./pages/about.html"> About the author </a>
-   </li>
-   <li>
-         <a href="./pages/contact.html"> Contact Us </a>
-       </li>
- </header>
-
- <div class="text-block">
-<main>
-   <p>“I can teach you how to bottle fame, brew glory, even put a stopper on death.”
-― J.K. Rowling, Harry Potter and the Sorcerer's Stone</p>
-</main>
-<img src="./images/hpandss.jpg" alt "harry potter and the sorcers stone">
-
+        </nav>
+      </header>
+      <div class="text-block">
+        <div class="book-image">
+          <p class="inner-box">
+            “I can teach you how to bottle fame, brew glory, even put a stopper on death.”
+            ― J.K. Rowling, Harry Potter and the Sorcerer's Stone
+            <img src="./images/hpandss.jpg" alt "harry potter and the sorcers stone">
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
-  </body>
-  </html>
+</div>
+</body>
+</html>
