--- a/Project3/pages/about.html
+++ b/Project3/pages/about.html
@@ -9,28 +9,52 @@
         <!--external font link-->
         <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
         <!--links to stylesheets-->
-        <link rel="stylesheet" type="text/css" href =  "./css/styles.css" />
-        <link rel="stylesheet" type="text/css" href = "./css/fonts.css" />
+        <link rel="stylesheet" type="text/css" href =  "../css/styles.css" />
+        <link rel="stylesheet" type="text/css" href = "../css/fonts.css" />
         </head>
         <body>
-        <div class="parent-container">
-<h1> About J.K. Rowling </h1>
- <div class="text-block"
-<p>Born in Yate, England, on July 31, 1965, J.K. Rowling came from humble
+        <div class="about-container">
+          <div class="parent-container">
+            <header>
+              <h1>About J.K. Rowling</h1>
+              <nav
+              <ul id = "nav-list" class= "navigation">
+                <div class="parent-container-02">
+                  <div class ="menu-item display-inline" >
+                    <a href="../index.html"> Home</a>
+                    <div class ="menu-item display-inline" >
+                      <a href="../pages/about.html"> About the author </a>
+                    </div>
+                    <div class ="menu-item display-inline" >
+                      <a href="../pages/contact.html"> Contact Us </a>
+                    </div>
+                    <div class="menu-item dropdown">
+                      <a href="#">More links</a>
+                      <div class="dropdown-content">
+                    <div class="dropdown-item">
+                      <a href="https://www.pottermore.com/"> Pottermore </a>
+                    </div>
+                  </div>
+                </div>
+                    <div class="site-picture">
+                      <img src="../images/owl.png" alt="owl">
+                    </div>
+                  </div>
+
+                </nav>
+              </header>
+              <div class="text-block">
+                <div class="book-image">
+                  <p class="inner-box">
+    "Born in Yate, England, on July 31, 1965, J.K. Rowling came from humble
   economic means before writing Harry Potter and the Sorcerer's Stone, a
   children's fantasy novel. The work was an international hit and Rowling wrote six more books in the series,
-  which sold hundreds of millions of copies and was adapted into a blockbuster film franchise. In 2012, Rowling
-  released the novel The Casual Vacancy.
+  which sold hundreds of millions of copies.."Taken from biography.com </p>
+  <img src="../images/rowling.jpg" alt="an image of J.K. Rowling" title = "J.K. Rowling" width = "318px;" height = "159px;" >
 
-  Taken from biography.com
-  <h3> Fun Fact </h3>
-  She wrote her initial HARRY POTTER Ideas on a napkin while on a train to London.
-  <img src="../images/rowling.jpg" alt="an image of J.K. Rowling" title = "J.K. Rowling" width = "550px;" height = "756px;" >
-</td>
-
-<a href="./contact.html"> Contact Us </a>
-
-<a href="../index.html"> Home</a>
+</div>
+</div>
+</div>
 </div>
 </div>
 </body>
