--- a/Project3/pages/contact.html
+++ b/Project3/pages/contact.html
@@ -1,3 +1,50 @@
+<!DOCTYPE html>
+<html>
+  <head>
+        <meta name="author" content= "Katherine Ayers">
+        <meta name "description" content= "A literature showcase showing type
+        and color understanding and relating it to a piece of writing."
+        <meta charset="utf-8">
+        <meta name "viewport" content = "width=device-width, initial-scale=1.0" >
+        <!--external font link-->
+        <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
+        <!--links to stylesheets-->
+        <link rel="stylesheet" type="text/css" href =  "../css/styles.css" />
+        <link rel="stylesheet" type="text/css" href = "../css/fonts.css" />
+        </head>
+          <body>
+          <div class="about-container">
+            <div class="parent-container">
+              <header>
+                <h1>About J.K. Rowling</h1>
+                <nav
+                <ul id = "nav-list" class= "navigation">
+                  <div class="parent-container-02">
+                    <div class ="menu-item display-inline" >
+                      <a href="../index.html"> Home</a>
+                      <div class ="menu-item display-inline" >
+                        <a href="../pages/about.html"> About the author </a>
+                      </div>
+                      <div class ="menu-item display-inline" >
+                        <a href="../pages/contact.html"> Contact Us </a>
+                      </div>
+                      <div class="menu-item dropdown">
+                        <a href="#">More links</a>
+                        <div class="dropdown-content">
+                      <div class="dropdown-item">
+                        <a href="https://www.pottermore.com/"> Pottermore </a>
+                      </div>
+                    </div>
+                  </div>
+                      <div class="site-picture">
+                        <img src="../images/owl.png" alt="owl">
+                      </div>
+                    </div>
+
+                  </nav>
+                </header>
+                <div class="text-block">
+                <div class="inner-box">
 <form action="http://www.example.com/login.php" method="post" id="sign-in" class="basic-forms">
 <h1> Contact Us! </h1>
 <label>
@@ -14,10 +61,11 @@ Your E-mail:
 
 <label>
  Questions/ Comments/ Concerns:
-   <textarea name="comments" cols="6" rows="6" style="min-width:100%">
+   <textarea name="comments" cols="6" rows="6" style="min-width:80%">
+</textarea>
+     <input type="submit" value="Submit"/>
+   </label>
 
-     <input type="submit" name="submit" value="Submit" />
-
-
-     <a href="../index.html"> Home</a>
     </form>
+  </div>
+</div>
