--- a/Project3/pages/sample.html
+++ b/Project3/pages/sample.html
@@ -1,34 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-        <meta name="author" content= "Katherine Ayers">
-        <meta name "description" content= "A literature showcase showing type
-        and color understanding and relating it to a piece of writing."
-        <meta charset="utf-8">
-        <meta name "viewport" content = "width=device-width, initial-scale=1.0" >
-        <!--external font link-->
-        <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-        <!--links to stylesheets-->
-        <link rel="stylesheet" type="text/css" href =  "./css/styles.css" />
-        <link rel="stylesheet" type="text/css" href = "./css/fonts.css" />
-        </head>
-<body>
-  <div class="parent-container">
-<header>
-<h1>Harry Potter and the Sorcerer's Stone</h1>
-<div class="text-block"
-<p>“A breeze ruffled the neat hedges of Privet Drive, which lay silent and tidy under the inky sky, the very last
-   place you would expect astonishing things to happen. Harry Potter rolled over inside his blankets without waking up.
-  One small hand closed on the letter beside him and he slept on, not knowing he was special, not knowing he was
-  famous, not knowing he would be woken in a few hours' time by Mrs. Dursley's scream as she opened the front door
-  to put out the milk bottles, nor that he would spend the next few weeks being prodded and pinched by his cousin
-  Dudley...He couldn't know that at this very moment, people meeting in secret all over the country were holding up
-  their glasses and saying in hushed voices: "To Harry Potter - the boy who lived!...” </p>
+<head>
+  <meta name="author" content= "Katherine Ayers">
+  <meta name "description" content= "A literature showcase showing type
+  and color understanding and relating it to a piece of writing."
+  <meta charset="utf-8">
+  <meta name "viewport" content = "width=device-width, initial-scale=1.0" >
+  <!--external font link-->
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
+  <!--links to stylesheets-->
+  <link rel="stylesheet" type="text/css" href =  "../css/styles.css" />
+  <link rel="stylesheet" type="text/css" href = "../css/fonts.css" />
+</head>
+<body id="page2">
 
-  <a href="./about.html"> About the author </a>
-  <a href="./contact.html"> Contact Us </a>
-  <a href="../index.html"> Home</a>
+  <div class="parent-container">
+    <header>
+      <h1>Harry Potter and the Sorcerer's Stone</h1>
+      <nav
+      <ul id = "nav-list" class= "navigation">
+        <div class="parent-container-02">
+          <div class ="menu-item display-inline" >
+            <a href="../index.html"> Home</a>
+            <div class ="menu-item display-inline" >
+              <a href="../pages/about.html"> About the author </a>
+            </div>
+            <div class ="menu-item display-inline" >
+              <a href="../pages/contact.html"> Contact Us </a>
+            </div>
+            <div class="menu-item dropdown">
+              <a href="#">More links</a>
+              <div class="dropdown-content">
+            <div class="dropdown-item">
+              <a href="https://www.pottermore.com/"> Pottermore </a>
+            </div>
+          </div>
+        </div>
+            <div class="site-picture">
+              <img src="../images/owl.png" alt="owl">
+            </div>
+          </div>
+        </nav>
+      </header>
+<div class= "text-box">
+      <div class ="inner-box">
+        <p>
+          “A breeze ruffled the neat hedges of Privet Drive, which lay silent and tidy under the inky sky, the very last
+          place you would expect astonishing things to happen. Harry Potter rolled over inside his blankets without waking up.
+          One small hand closed on the letter beside him and he slept on, not knowing he was special, not knowing he was
+          famous, not knowing he would be woken in a few hours' time by Mrs. Dursley's scream as she opened the front door
+          to put out the milk bottles, nor that he would spend the next few weeks being prodded and pinched by his cousin
+          Dudley...He couldn't know that at this very moment, people meeting in secret all over the country were holding up
+          their glasses and saying in hushed voices: "To Harry Potter - the boy who lived!...”
+</p>
+  <p class ="absoulute-element">Fun Fact: She wrote her initial Harry Potter ideas on a napkin while on a train to London.</p>
+
 </div>
 </div>
+        </div>
+      </div>
+    </div>
+  </body>
   </html>
-</body>
