--- a/Project4/index.html
+++ b/Project4/index.html
@@ -12,30 +12,35 @@
       <h1>Responsive Web Design</h1>
       </header>
       <div class="text-block">
-            <h2>What RWD is</h2>
-          <p class="inner-box-one">
-            RWD stands for resposnive web design. Responsive web design is an idea used in web design
+
+          <div class="inner-box-one">
+              <h2>What RWD is</h2>
+            <p>RWD stands for resposnive web design. Responsive web design is an idea used in web design
             to make pages fit to any screen size, whether it's a phone, tablet, or computer. It also works to
             think of design aspects for each screen size ratio. One design concept may work better on a phone, and another
             on a computer and responsive web design works with all those designs to make them work on all devices.
           </p>
+        </div>
 
       <div class="text-block">
-            <h2>Why is it Important?</h2>
-        <p class="inner-box-two">
-
+        <div class="inner-box-two">
+          <h2>Why is it Important?</h2>
+          <p>
           Responsive web design makes pages look and be more accessible to users, especially since phones are used
           more than ever. It also allows for only one website to be used accross all platforms which is easier for
           develepers to manage. So all in all it looks better across all media devices and with responsive web design it
           is easier to manage one site rather than multiple.
         </p>
-
+</div>
             <div class="text-block">
-                      <h2>The Process</h2>
-              <p class="inner-box-three">
+
+              <div class="inner-box-three">
+                  <h2>The Process</h2>
+                  <p>
                 The process is to start with the smallest version and build the site from there. From here one can do the math at where certain aspects might
                 look the best and apply that px amount to the stylesheet
               </p>
+            </div>
             </div>
           </div>
         </div>
